# simple_yew_webpack_template

./: .gitignore  Cargo.toml  README.md  package.json  webpack.config.js
src/: app.rs  lib.rs
