[package]
name = "webpack_template"
version = "0.1.0"
authors = ["doasm <doasmwell@gmail.com>"]
edition = "2018"
description = "a template"
repository = "https://github.com/doasm/simple_yew_webpack_template"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
log = "0.4.14"
wasm-logger = "0.2.0"
wee_alloc = { version = "0.4.5" }
wasm-bindgen = "^0.2"
yew = "0.18.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.51"
features = [
    'KeyboardEvent',
]